--- a/css/styles.css
+++ b/css/styles.css
@@ -13,6 +13,7 @@
 --third-background: #2F303A;
 --accent: #2196F3;
 --icons-color: #AFB1B8;
+--transformation:250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 body{
@@ -56,6 +57,8 @@ a {
     padding-top:94px;
     padding-bottom: 94px;
   }
+
+
   /* header */
   .page-header {
        border-bottom: 1px solid #ECECEC;
@@ -124,6 +127,7 @@ font-family: 'Raleway';
     font-weight: 500;
     line-height: 1.14;
     letter-spacing: 0.02em;
+    transition: color var(--transformation);
 }
 
 .nav-contact {
@@ -136,30 +140,41 @@ font-family: 'Raleway';
     margin-bottom: 32px;
     display: flex;
     align-items: center;
+    transition:var(--transformation);
 
 }
 .nav-contact:hover,
 .nav-contact:focus {
     color: var(--accent);
     fill: var(--accent);
+    
 }
 
-.nav-contact:hover,
-.nav-contact:focus,
-.nav-contact:active
-{
-        color:var(--accent);
-    }
-
 .nav-link:hover,
-.nav-link:focus, 
-.nav-link:active
+.nav-link:focus
+
 {
         color:var(--accent);
     }
     .current {
+        display: block;
+        
         color: var(--accent);
+           
     }
+
+    .current::after {
+        position: relative;
+        content: "";
+        display: block;
+        width: 100%;
+        height: 4px;
+        background-color: var(--accent);
+        border-radius: 4px;
+        transform: translateY(30px);
+           }
+
+
 /* hero */
 
 .hero {
@@ -270,12 +285,35 @@ margin-right: 30px;
 
 .whatwedo-images {
     margin-top: 50px;
-    display: flex;    
+    display: flex;
 }
 
- .whatwedo-image:not(:last-child) {
+ .whatwedo-images>li:not(:last-child) {
     margin-right: 30px;    
  }
+
+.whatwedo-image {
+    position: relative;
+    
+}
+.whatwedo-image-text{
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    background-color: rgba(47, 48, 58, 0.8);
+    padding-top: 27px;
+    padding-bottom: 27px;
+
+    font-weight: 700;
+        font-size: 14px;
+        line-height: 16px;
+        text-align: center;
+        text-transform: uppercase;
+        color: var(--main-background);
+
+    
+}
+
  
  /* team */
  .team {
@@ -333,19 +371,17 @@ margin-bottom: 10px;
  .team-icon {
     padding: 12px;
     height: 44px;
-    width: 44px;
-    
+    width: 44px;    
     fill: var(--icons-color);
+    transition:var(--transformation);
  }
  .team-icon:hover,
  .team-icon:focus {
-    background-color: var(--accent);
+    
     border-radius: 50%;
-    overflow: visible;
-    
-    
-   
+    overflow: visible;   
     fill: var(--main-background);
+   background-color: var(--accent);
  }
  
  /* clients */
@@ -365,13 +401,16 @@ margin-bottom: 10px;
     border-radius: 4px;
     border: 1px solid var(--icons-color);
     align-items: center;
-    justify-content: center;    
+    justify-content: center;
+    transition: border-color var(--transformation); 
+       
  }
  .client-icon {
     fill: var(--icons-color);
     display: flex;
     width: 106px;
     height: 60px;
+    transition:fill var(--transformation);
  }
 
 
@@ -383,6 +422,7 @@ margin-bottom: 10px;
  .client-icon-background:hover>.client-icon,
  .client-icon-background:focus>.client-icon {
     fill: var(--accent);
+    
  }
 
 
@@ -448,7 +488,8 @@ color: var(--main-background);
         background-color: rgba(255, 255, 255, 0.1);
         border-radius: 50%;
         overflow: visible;
-        
+        transition:background-color var(--transformation)
+            
     }
     .social-links-footer>li:not(:last-child){
         margin-right: 10px;
@@ -456,6 +497,7 @@ color: var(--main-background);
     .footer-icon:hover,
     .footer-icon:focus {
         background-color: var(--accent);
+        
 
     }
 
@@ -471,7 +513,6 @@ margin-bottom: 50px;
 .filter-button {
     width: max-content;
     padding: 6px 22px;
-    /* margin-right: 8px; */
     border-radius: 4px;   
 
     font-family: inherit;
@@ -482,6 +523,8 @@ margin-bottom: 50px;
     line-height: 1.62;
     text-align: center;
     border: 0;
+    transition:background-color var(--transformation);
+    
 }
 
 .filter-buttons>li:not(:last-of-type) {
@@ -492,14 +535,11 @@ margin-bottom: 50px;
 .filter-button:focus {
     background-color:var(--accent);
     color: var(--main-background);
+    
 }
 
 /* projects */
-.project-link {
-    display: block;
-   text-decoration: none;
-    
-}
+
 
 .projects-cards {    
     border-left:1px solid #EEEEEE ;
@@ -535,10 +575,7 @@ margin-bottom: 50px;
   margin-right: 30px;
   margin-bottom: 30px;
 }
-.project-link:hover,
-.project-link:focus {
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-}
+
 
 
 .projects-item:nth-child(3n) {
@@ -549,3 +586,93 @@ margin-bottom: 50px;
  {
 margin-bottom: 0;
 }
+
+.project-link {
+    position: relative;
+    
+   display: block;
+   text-decoration: none;
+   transition:var(--transformation)
+   
+    
+}
+.project-image {
+    position: relative;
+    overflow: hidden;    
+    
+}
+
+.project-image-text {
+    
+  position: absolute; 
+    padding:63px 24px;
+    width: 100%;
+    height: 100%;
+    bottom: 0;
+    background-color: rgba(33, 150, 243, 0.9);
+    font-size: 18px;
+    line-height: 1.56;
+    letter-spacing: 0.03em;
+    color: var(--main-background);
+    transform: translateY(100%);
+    transition:var(--transformation)
+    
+}
+
+ .project-link:hover  .project-image-text,
+ .project-link:focus  .project-image-text
+ {
+    transform: translateY(0);
+}
+
+
+.project-link:hover,
+.project-link:focus {
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+
+/* Modal */
+.backdrop {
+    position:fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.2);
+    transition:250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+}
+.is-hidden{
+    opacity: 0;
+    pointer-events: none;
+    transform: scale(1.5)   
+}
+
+
+
+.modal {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform:translate(-50%,-50%);
+    min-width: 528px;
+    min-height: 581px;
+    background-color: var(--main-background);
+             
+}
+
+
+.cross-button{    
+    display: flex;
+    margin-left:auto;
+    margin-top: 8px;
+    margin-right: 8px;
+        width: 30px;
+        height: 30px;
+        border-width: 1px;
+        border-color: rgba(0, 0, 0, 0.1);
+        border-radius: 50%;
+        background-color: var(--main-background);
+        align-items: center;
+    }
+       
